* Fixed a bug with the GridBox control and its "visibleCheckBoxes" property,   which prevented the browser from notifying the server about rows being checked.
* Added a new "Effect" class to the Style API that allows you to set effects
  related to a change in the "position", "size" or "visible" state of a component.
  The only effect currently available is "SMOOTH", which performs a gradual transition
  from one state to another.  i.e. set visible to false, and the component fades out.

* Fixed a minor issue with the range check that is performed with setting the "x", "y", "width" or "height"
  properties of a component.  Previously the range was -65536 to 65535 on "x" and "y"
  and 0 to 65535 on "width" and "height", now the values are -32768 and 32767.
  
* Replaced the "static Collection<Color> getNamedColors()" method on the "Color"
  class with a method similar to that found on enum types. The new method
  signature is "static Color[] values()", and the returned set is now in the order
  that the color constants are defined in the Color class.  Additionally, the "getName()"
  method has been renamed to "name()" and will now return an all uppercase name.  And
  finally, there is a new method called "ordinal()" that conforms to the enum type behavior.
  NOTE: Only "named" colors are included in the "values()" list and therefore only those
  colors will have an "ordinal()" value, ad-hoc colors created via "rgb()" or "#" using
  "Color.valueOf()" will have an ordinal of -1.

--- a/src/thinwire/render/web/resources/MainPage.html
+++ b/src/thinwire/render/web/resources/MainPage.html
@@ -64,6 +64,7 @@
 <script type="text/javascript" defer="defer" src="?_twr_=TextArea.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=DropDownGridBox.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=WebBrowser.js"></script>
+<script type="text/javascript" defer="defer" src="?_twr_=Animation.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=Startup.js"></script>
 </body>
 </html>
