Added the Slider control, a new ui SelectionComponent.

--- a/src/thinwire/render/web/resources/MainPage.html
+++ b/src/thinwire/render/web/resources/MainPage.html
@@ -59,6 +59,7 @@
 <script type="text/javascript" defer="defer" src="?_twr_=Menu.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=CheckBox.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=RadioButton.js"></script>
+<script type="text/javascript" defer="defer" src="?_twr_=Slider.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=Tree.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=TextField.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=TextArea.js"></script>
