* Added an Application Local storage mechanism that works similar to ThreadLocal   variables except that Application Local variables are tied to the Application   instance (i.e. session). The new class is called Application.Local and   implements the same semantics as the java class ThreadLocal.
* Added support for determining the rendered width of text based on the font
  settings for a component. This allows you to accurately determine how big a
  label or other component needs to be in order to display the full width of the
  text. The new method can be accessed off the Font instance that is associated to
  a Component via the Style API. Ex:
  comp.getStyle().getFont().getStringWidth("Hello World"); Determining the font
  metrics within a browser is a tricky matter since there is no actual method for
  doing so. Therefore, make sure you test this feature thoroughly on the browsers
  you plan to deploy on.

--- a/src/thinwire/render/web/resources/MainPage.html
+++ b/src/thinwire/render/web/resources/MainPage.html
@@ -29,7 +29,13 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 <title>[ThinWire]</title>
-<link href="?_twr_=WindowsStyle.css" media="all" rel="stylesheet" type="text/css"/>
+<style type="text/css">
+.floatDivLeft { float: left; }
+.mainMenuItem { float: left; }
+.tabSheetTab { float: left; }
+.gridBoxColumn { float: left; }    
+.gridBoxColumnHeader { float: left; }
+</style>
 </head>
 <body>
 <script type="text/javascript" id="jsidebug"></script>
