* Changed the name of reflection based get property mechanism used by all Style   classes. Previously you could get a property value dynamically by calling the   'getValue()' method on either the Style class or a contained Style class such as   Border. The new name for the method is 'getProperty()'.   Example 1: comp.getStyle().getProperty("backgroundColor");   Example 2: comp.getStyle().getBackground().getProperty("backgroundColor");
* Added a new reflection based set property mechansim to all Style classes.
  Example 1: comp.getStyle().setProperty("borderSize", 2);
  Example 2: comp.getStyle().getBorder().setProperty("borderColor", Color.BLUE);

--- a/src/thinwire/render/web/resources/MainPage.html
+++ b/src/thinwire/render/web/resources/MainPage.html
@@ -32,7 +32,6 @@
 <style type="text/css">
 .floatDivLeft { float: left; }
 .mainMenuItem { float: left; }
-.tabSheetTab { float: left; }
 .gridBoxColumn { float: left; }    
 .gridBoxColumnHeader { float: left; }
 </style>
@@ -69,7 +68,7 @@
 <script type="text/javascript" defer="defer" src="?_twr_=Tree.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=TextField.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=TextArea.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=DropDownGridBox.js"></script>
+<script type="text/javascript" defer="defer" src="?_twr_=DropDown.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=WebBrowser.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=Animation.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=Startup.js"></script>
