- Created a RangeComponent interface and abstract class implementation.  - Refactored Slider to extend the AbstractRangeComponent and not implement SelctionComponent  - Added a ProgressBar component that also extends the AbstractRangeComponent  - Refactored the client-side javascript code for Slider to share common functionality with ProgressBar in the tw_BaseRange class.  - Updated the playground demo to reflect the new components.

--- a/src/thinwire/render/web/resources/MainPage.html
+++ b/src/thinwire/render/web/resources/MainPage.html
@@ -49,6 +49,7 @@
 <script type="text/javascript" defer="defer" src="?_twr_=BaseText.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=BaseCheckRadio.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=BaseBrowserLink.js"></script>
+<script type="text/javascript" defer="defer" src="?_twr_=BaseRange.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=Container.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=Frame.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=Dialog.js"></script>
@@ -65,6 +66,7 @@
 <script type="text/javascript" defer="defer" src="?_twr_=CheckBox.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=RadioButton.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=Slider.js"></script>
+<script type="text/javascript" defer="defer" src="?_twr_=ProgressBar.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=Tree.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=TextField.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=TextArea.js"></script>
