--- a/src/thinwire/render/web/resources/MainPage.html
+++ b/src/thinwire/render/web/resources/MainPage.html
@@ -69,6 +69,7 @@
 <script type="text/javascript" defer="defer" src="?_twr_=Tree.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=TextField.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=TextArea.js"></script>
+<script type="text/javascript" defer="defer" src="?_twr_=DateBox.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=DropDown.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=WebBrowser.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=Animation.js"></script>
