[10/31/06] * Made the ImageInfo utility class immutable. Therefore you can no longer call   setName() on an instance of this class.
* Implemented Feature Request 1587707 "ImageInfo: Allow access for all 'image'
  properties".
  
* Changed the Application.current() static method so that it will return 'null'
  instead of throwing an exception, if the current app instance cannot be found.
  
* Started Implementing Feature Request 1581968 " tyle: Add support for Image
  Borders".  The following components still do not style correctly: DropDown's (close),
  Menu, Divider, Button (half-way), RadioButton, CheckBox, TabFolder, Slider.

* Cleaned up the client-side 'support' constructor argument for lineHeight, text
  & editMask.
  
* Corrected an alignment bug with the new RadioButton/CheckBox border styling
  work. More problems still exist with this right now.

--- a/src/thinwire/render/web/resources/MainPage.html
+++ b/src/thinwire/render/web/resources/MainPage.html
@@ -49,6 +49,7 @@
 <script type="text/javascript" defer="defer" src="?_twr_=BaseCheckRadio.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=BaseBrowserLink.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=BaseRange.js"></script>
+<script type="text/javascript" defer="defer" src="?_twr_=BorderImage.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=Container.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=Frame.js"></script>
 <script type="text/javascript" defer="defer" src="?_twr_=Dialog.js"></script>
