--- a/src/thinwire/render/web/resources/MainPage.html
+++ b/src/thinwire/render/web/resources/MainPage.html
@@ -37,43 +37,6 @@
 </head>
 <body>
 <script type="text/javascript" id="jsidebug"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Main.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Class.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=HttpRequest.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=DragHandler.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=EventManager.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=KeyboardManager.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Component.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=BaseContainer.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=BaseText.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=BaseCheckRadio.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=BaseBrowserLink.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=BaseRange.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=BorderImage.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Container.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Frame.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Dialog.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Label.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Button.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Divider.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=GridBox.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=TabFolder.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=TabSheet.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Frame.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Hyperlink.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Image.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Menu.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=CheckBox.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=RadioButton.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Slider.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=ProgressBar.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Tree.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=TextField.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=TextArea.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=DateBox.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=DropDown.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=WebBrowser.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Animation.js"></script>
-<script type="text/javascript" defer="defer" src="?_twr_=Startup.js"></script>
+<script type="text/javascript" defer="defer" src="?_twr_=${ThinWire.js}"></script>
 </body>
 </html>
