* Fixed Issue 1679316 - File Chooser does not work (fixed for all browsers)

--- a/src/thinwire/render/web/resources/FileUploadPage.html
+++ b/src/thinwire/render/web/resources/FileUploadPage.html
@@ -21,8 +21,8 @@
   contact the following company who invented, built and supports the technology:
   
                 Custom Credit Systems, Richardson, TX 75081, USA.
-   	            email: info@thinwire.com    ph: +1 (888) 644-6405
- 	                        http://www.thinwire.com
+                email: info@thinwire.com    ph: +1 (888) 644-6405
+                            http://www.thinwire.com
 #ENDIF
 #IFDEF ALT_LICENSE
 #LICENSE_HEADER#
@@ -35,7 +35,7 @@
         <title>[ThinWire]</title>
     </head>
     <body>
-        <form id="uploadForm" accept-charset="utf-8" onsubmit="return false;" action="?_twa_=upload" method="post" enctype="multipart/form-data">
+        <form id="uploadForm" accept-charset="utf-8" action="?_twa_=upload" method="post" enctype="multipart/form-data">
             <input type="file" style="position: absolute; right: -5px; top: -10px; height: 500px;"/>
         </form>
     </body>
