--- a/src/thinwire/render/web/resources/MainPage.html
+++ b/src/thinwire/render/web/resources/MainPage.html
@@ -32,7 +32,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-<title>Loading ThinWire Application...</title>
+<title>${initialFrameTitle}</title>
 <style type="text/css">
 .floatDivLeft { float: left; }
 .mainMenuItem { float: left; }
