--- a/src/main/resources/thinwire/render/web/resources/MainPage.html
+++ b/src/main/resources/thinwire/render/web/resources/MainPage.html
@@ -4,6 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 <title>${initialFrameTitle}</title>
 <style type="text/css">
+* { outline: none; }
 .floatDivLeft { float: left; }
 .mainMenuItem { float: left; }
 .gridBoxColumn { float: left; }    
